--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - '8501:8501'
     volumes:
       - .:/app
+    env_file:
+      - .env
     networks:
       - supabase_network_orchestrator-boti
 
